Hiccup and domina. AJAX next.

--- a/bin/public/login.html
+++ b/bin/public/login.html
@@ -32,5 +32,6 @@
         </fieldset>
     </form>
     <script src="js/main.js"></script>
+    <script>books.login.init();</script>
 </body>
 </html>
