Home controller and views.

--- a/bin/public/signin/forms.html
+++ b/bin/public/signin/forms.html
@@ -20,7 +20,8 @@
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
 		<div class="secondary-link"><a href="javascript:void(0)" class="login-link">Login</a></div>
 	</form>
-	<div class="alert alert-warning"></div>
+	<div class="alert alert-warning" id="warningInfoMessage"></div>
+	<div class="alert alert-info" id="alertInfoMessage"></div>
 
 
 </div>
