--- a/resources/public/shelves/add.html
+++ b/resources/public/shelves/add.html
@@ -6,14 +6,14 @@
 		<div class="form-group">
 			<label class="col-sm-2 control-label" for="inputName">Name</label>
 			<div class="col-sm-10">
-				<input id="inputName" name="name" class="form-control" placeholder="Name" />
+				<input id="shelveName" name="name" class="form-control" placeholder="Name" />
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="inputDescription" name="description" class="col-sm-2 control-label">Description</label>
 			<div class="col-sm-10">
-				<textarea class="form-control" id="inputDescription"
-					placeholder="Description"></textarea>
+				<textarea class="form-control" id="shelveDescription"
+					placeholder="Description" name="description"></textarea>
 			</div>
 		</div>
 		<div class="text-right">
