--- a/resources/public/shelves/add.html
+++ b/resources/public/shelves/add.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 		<div class="text-right">
-			<a href="/shelves" class="btn btn-primary">Cancel</a>
+			<a href="#/" class="btn btn-primary">Cancel</a>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</form>
