--- a/resources/public/shelves/list.html
+++ b/resources/public/shelves/list.html
@@ -1,7 +1,7 @@
 <div class="shelves-list">
 	<h2>Shelves</h2>
 	<hr/>
-	<a id="addNewListButton" href="javascript:void(0)" class="btn btn-lg btn-primary pull-right ">Add new&nbsp;<i class="glyphicon glyphicon-plus"></i></a>
+	<a href="#/add" class="btn btn-lg btn-primary pull-right ">Add new&nbsp;<i class="glyphicon glyphicon-plus"></i></a>
 	<table class="table">
        <thead>
          <tr>
