--- a/bin/public/shelves/edit.html
+++ b/bin/public/shelves/edit.html
@@ -1,24 +1,24 @@
-<div class="shelves-edit well">
-	<h2>Edit shelve <span id="shelveNamePlaceholder"></span></h2>
-	<hr />
+<div class="shelves-edit">
+	<h2>Edit shelve <span id="shelveNamePlaceholder">{{shelve.name}}</span></h2>
+	<hr/>
 
-	<form id="shelveEditForm" class="form-horizontal">
-		<input type="hidden" name="id" value=""/>
+	<form id="shelveAddForm" class="form-horizontal">
+		<input type="text" name="id" value="{{shelve.id}}" style="display:none"/>
 		<div class="form-group">
-			<label class="col-sm-2 control-label" name="name" for="inputName">Name</label>
+			<label class="col-sm-2 control-label" name="name" for="shelveName">Name</label>
 			<div class="col-sm-10">
-				<input id="inputName" class="form-control" placeholder="Name" />
+				<input id="shelveName" class="form-control" placeholder="Name" name="name" value="{{shelve.name}}"/>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="inputDescription" name="description" class="col-sm-2 control-label">Description</label>
+			<label for="shelveDescription" class="col-sm-2 control-label">Description</label>
 			<div class="col-sm-10">
-				<textarea class="form-control" id="inputDescription"
-					placeholder="Description"></textarea>
+				<textarea class="form-control" id="shelveDescription"
+					placeholder="Description" name="description" >{{shelve.description}}</textarea>
 			</div>
 		</div>
 		<div class="text-right">
-			<a href="/shelves" class="btn btn-primary">Cancel</a>
+			<a href="#/shelves" class="btn btn-primary">Cancel</a>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</form>
