--- a/bin/public/books/search.html
+++ b/bin/public/books/search.html
@@ -1,11 +1,11 @@
-<div class="books-search well">
+<div class="books-search">
 	<h2>Search books</h2>
 	<hr/>
 	
-	<form id="bookSearchForm" class="form-horizontal">
+	<form id="searchForm" class="form-horizontal clearfix">
 		<div class="form-group col-sm-10">
 			<div class="col-sm-12">
-				<input id="inputName" name="term" class="form-control" placeholder="Term" />
+				<input id="searchTerm" name="term" class="form-control" placeholder="Term" />
 			</div>
 		</div>
 		<div class="text-right col-sm-2">
@@ -13,47 +13,29 @@
 		</div>
 	</form>
 	
-	<table class="table">
-       <thead>
-         <tr>
-           <th>Image</th>
-           <th>Book title</th>
-           <th>Author</th>
-           <th>Actions</th>
-         </tr>
-       </thead>
-       <tbody>
-         <tr>
-           <td>1</td>
-           <td>Mark</td>
-           <td>Otto</td>
-           <td>
-				<a href="/shelves/view/" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-eye-open"></i></a>
-				<a href="/shelves/edit/" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></a>
-				<a href="/shelves/delete/" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-trash"></i></a>
-			</td>
-         </tr>
-		<tr>
-			<td>1</td>
-			<td>Mark</td>
-			<td>Otto</td>
-			<td><a href="/shelves/view/" class="btn btn-sm btn-primary"><i
-					class="glyphicon glyphicon-eye-open"></i></a> <a href="/shelves/edit/"
-				class="btn btn-sm btn-primary"><i
-					class="glyphicon glyphicon-pencil"></i></a> <a href="/shelves/delete/"
-				class="btn btn-sm btn-danger"><i
-					class="glyphicon glyphicon-trash"></i></a></td>
-		</tr>
-		<tr>
-			<td>1</td>
-			<td>Mark</td>
-			<td>Otto</td>
-			<td><a href="/shelves/view/" class="btn btn-sm btn-primary"><i
-					class="glyphicon glyphicon-eye-open"></i></a> <a href="/shelves/edit/"
-				class="btn btn-sm btn-primary"><i
-					class="glyphicon glyphicon-pencil"></i></a> <a href="/shelves/delete/"
-				class="btn btn-sm btn-danger"><i
-					class="glyphicon glyphicon-trash"></i></a></td>
-		</tr>
-	</table>
+	<div class="searching-loader" style="text-align:center; display:none">
+		<p>Searching...</p>
+	</div>
+	<ul class="search-results-list">
+	
+		<li class="template-item clearfix" style="display:none">
+			<div class="image">
+				<img src="" class="book-image" />
+			</div>
+			<div class="title">
+				<h3 class="book-title"></h3>
+			</div>
+			<div class="author">
+				<p class="book-author"></p>
+			</div>
+			<div class="rating">
+				<p class="book-rating"></p>
+			</div>
+			<div class="actions pull-right">
+				<a href="/#/books/details/" class="btn btn-sm btn-primary">Details <i class="glyphicon glyphicon-eye-open"></i></a>
+				<a href="/#/shelve/add/" class="btn btn-sm btn-primary">Add to shelve <i class="glyphicon glyphicon-plus"></i></a>
+			</div>
+		</li>
+	
+	</ul>
 </div>
