--- a/resources/public/books/search.html
+++ b/resources/public/books/search.html
@@ -32,8 +32,8 @@
 				<p class="book-rating"></p>
 			</div>
 			<div class="actions pull-right">
-				<a href="/#/books/details/" class="btn btn-sm btn-primary">Details <i class="glyphicon glyphicon-eye-open"></i></a>
-				<a href="/#/shelve/add/" class="btn btn-sm btn-primary">Add to shelve <i class="glyphicon glyphicon-plus"></i></a>
+				<a href="/#/books/details/" class="btn btn-sm btn-primary book-details">Details <i class="glyphicon glyphicon-eye-open"></i></a>
+				<!-- <a href="/#/shelve/add/" class="btn btn-sm btn-primary">Add to shelve <i class="glyphicon glyphicon-plus"></i></a> -->
 			</div>
 		</li>
 	
