--- a/resources/public/users/list.html
+++ b/resources/public/users/list.html
@@ -1,5 +1,5 @@
 <div class="users-list">
-	<h2>users</h2>
+	<h2>Users</h2>
 	<hr/>
 	<a href="#/users/add" class="btn btn-lg btn-primary pull-right ">Add new&nbsp;<i class="glyphicon glyphicon-plus"></i></a>
 	<table class="table">
