--- a/bin/public/books/search.html
+++ b/bin/public/books/search.html
@@ -18,7 +18,7 @@
 	</div>
 	<ul class="search-results-list">
 	
-		<li class="template-item clearfix" style="display:none">
+		<li class="template-item clearfix transitionable" style="display:none">
 			<div class="image">
 				<img src="" class="book-image" />
 			</div>
@@ -32,7 +32,7 @@
 				<p class="book-rating"></p>
 			</div>
 			<div class="actions pull-right">
-				<a href="/#/books/details/" class="btn btn-sm btn-primary book-details">Details <i class="glyphicon glyphicon-eye-open"></i></a>
+				<a href="/#/books/details/" class="btn btn-sm btn-primary book-details">Details</a>
 				<!-- <a href="/#/shelve/add/" class="btn btn-sm btn-primary">Add to shelve <i class="glyphicon glyphicon-plus"></i></a> -->
 			</div>
 		</li>
