--- a/resources/public/books/view.html
+++ b/resources/public/books/view.html
@@ -42,7 +42,7 @@
 					<div class="in-shelves">
 						<div class="one-shelve">
 							<em></em>
-							<a href="javascript:void(0)" class="glyphicon glyphicon-remove">&nbsp;</a>
+							<a href="javascript:void(0)" class="glyphicon glyphicon-remove pull-right"></a>
 						</div>
 					</div>
 				</div>
@@ -74,7 +74,7 @@
 		<h4>Links</h4>
 		<div class="book-links clearfix">
 			<ul class="clearfix">
-				<li>
+				<li class="transitionable">
 					<div class="link">
 						<a href="" target="_blank"></a>
 					</div>
@@ -94,6 +94,9 @@
 				</div>
 				<div class="title">
 					<a href=""></a>
+				</div>
+				<div class="rating">
+					Rating: <em class="rating-value"></em>
 				</div>
 			</div>
 		</div>
