--- a/resources/public/shelves/view.html
+++ b/resources/public/shelves/view.html
@@ -9,7 +9,7 @@
 	<div class="shelve-books-holder">
 		<h3>Books</h3>
 		<div class="shelve-books clearfix">
-			<div class="shelve-book-template">
+			<div class="shelve-book-template transitionable">
 				<div class="image">
 					<image src="">
 				</div>
