--- a/bin/public/shelves/list.html
+++ b/bin/public/shelves/list.html
@@ -14,9 +14,11 @@
        <tbody>
          <tr class="template-item">
            <td class="shelve-id"></td>
-           <td class="shelve-name"></td>
+           <td class="shelve-name">
+           	<a href=""></a>
+           </td>
            <td class="shelve-count"></td>
-           <td class="shelve-actions">
+           <td class="shelve-actions" style="text-align:right;">
 				<a href="javascript:void(0)" class="btn btn-sm btn-primary view-shelve-info"><i class="glyphicon glyphicon-eye-open"></i></a>
 				<a href="/shelves/edit/" class="btn btn-sm btn-primary edit-shelve"><i class="glyphicon glyphicon-pencil"></i></a>
 				<a href="/shelves/delete/" class="btn btn-sm btn-danger delete-shelve"><i class="glyphicon glyphicon-trash"></i></a>
