--- a/bin/public/users/edit.html
+++ b/bin/public/users/edit.html
@@ -1,5 +1,5 @@
 <div class="users-edit">
-	<h2>Edit user <span id="userNamePlaceholder">{{user.name}}</span></h2>
+	<h2>Edit user <span id="userNamePlaceholder">{{edit-user.name}}</span></h2>
 	<hr/>
 
 	<form id="userAddForm" class="form-horizontal">
