--- a/bin/public/shelves/view.html
+++ b/bin/public/shelves/view.html
@@ -2,12 +2,11 @@
 	<h2 class="shelve-name"></h2>
 	<hr/>
 	
-	<h3>Description</h3>
 	<div class="shelve-description">
 	</div>
 	
 	<div class="shelve-books-holder">
-		<h3>Books</h3>
+		<h3>Books in shelve</h3>
 		<div class="shelve-books clearfix">
 			<div class="shelve-book-template transitionable">
 				<div class="image">
