--- a/resources/public/books/search.html
+++ b/resources/public/books/search.html
@@ -38,4 +38,10 @@
 		</li>
 	
 	</ul>
+	
+	<div class="paginator" style="display:none; text-align:right;">
+		<em style="margin-right:10px;">showing from <em class="from"></em> to <em class="to"></em> from total <em class="total"></em></em>
+		<a href="" class="btn btn-primary btn-sm previous-page" style="display:none">Previous Page</a>
+		<a href="" class="btn btn-primary btn-sm next-page" style="display:none">Next Page</a>
+	</div>
 </div>
