--- a/resources/public/users/list.html
+++ b/resources/public/users/list.html
@@ -18,8 +18,7 @@
            <td class="user-name"></td>
            <td class="user-surname"></td>
            <td class="user-email"></td>
-           <td class="user-actions">
-				<a href="javascript:void(0)" class="btn btn-sm btn-primary view-user-info"><i class="glyphicon glyphicon-eye-open"></i></a>
+           <td class="user-actions" style="text-align:right;">
 				<a href="/users/edit/" class="btn btn-sm btn-primary edit-user"><i class="glyphicon glyphicon-pencil"></i></a>
 				<a href="/users/delete/" class="btn btn-sm btn-danger delete-user"><i class="glyphicon glyphicon-trash"></i></a>
 			</td>
